<resources>
    <string name="app_name">Allergy Diary</string>
    <string name="diary">Diary</string>
    <string name="feeling">How do you feel today?</string>
    <string name="symptoms">Allergic symptoms</string>
    <string name="report">Generate report</string>
    <string name="month">month</string>
    <string name="statistics">Statistics</string>
    <string name="forecast">Forecast</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="about">About app</string>
    <string name="everyday_survey">Everyday survey</string>
    <string name="medication">Medication</string>
    <string name="medicine">Taken medicine</string>
    <string name="allergen">Allergen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="schedule">Schedule</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="changeBtn">Change allergens</string>
    <string name="saveBtn">Save</string>
    <string name="generateReportBtn">Generate report</string>
    <string name="pickAllergens">Pick allergens:</string>
    <string name="diaryDescription">Fill your daily questionnaires about allergy symptoms</string>
    <string name="statisticsDescription">Monitor your health, drugs effect and share your health
        report with your doctor</string>
    <string name="forecastDescription">Choose allergens and track pollen forecast in your
        region</string>
    <string name="description">Place for product placement</string>
    <string name="attribution">Attribution</string>
    <string name="madeBy">Icon created by %1$s from www.flaticon.com</string>

    <string-array name="questionnaireNotification">
        <item>Allergy Diary</item>
        <item>Time for filling daily questionnaire</item>
    </string-array>
    <string-array name="medicineNotification">
        <item>Allergy Diary</item>
        <item>Time for taking medicine</item>
    </string-array>
    <string-array
        name="statistic_names">
        <item>Number of records</item>
        <item>Average</item>
        <item>Median</item>
        <item>Min value</item>
        <item>Max value</item>
        <item>Taken pills</item>
    </string-array>
    <string-array
        name="allergen_picker">
        <item>Alder</item>
        <item>Alternaria</item>
        <item>Aspen</item>
        <item>Birch</item>
        <item>Cladosporium</item>
        <item>Goosefoots</item>
        <item>Grasses</item>
        <item>Hazel</item>
        <item>Mugwort</item>
        <item>Nettles</item>
        <item>Oak</item>
        <item>Plantains</item>
        <item>Ragweed</item>
        <item>Sorrels</item>
    </string-array>
</resources>
