<?xml version="1.0" encoding="utf-8"?>
<com.github.mzule.fantasyslide.FantasyDrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/costam">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>
    <com.github.mzule.fantasyslide.SideBar
        android:id="@+id/leftSideBar"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/background_color"
        android:gravity="center_vertical"
        app:maxTranslationX="66dp">
        <LinearLayout
            android:id="@+id/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <com.example.allergydiary.CircleImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:src="@drawable/launcher_icon_with_background"
                app:civ_border_color="@color/menu_text_color"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Allergy Diary"
                android:fontFamily="@font/freestyle_script"
                android:textColor="@color/menu_text_color"
                android:textSize="30sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/toForecast"
            style="@style/MenuText"
            android:drawableLeft="@drawable/ic_round_cloud_queue_24px"
            android:text="@string/forecast" />
        <TextView
            android:id="@+id/toDiary"
            style="@style/MenuText"
            android:drawableLeft="@drawable/ic_round_import_contacts_24px"
            android:text="@string/diary" />
        <TextView
            android:id="@+id/toCharts"
            style="@style/MenuText"
            android:drawableLeft="@drawable/ic_round_bar_chart_24px"
            android:text="@string/graphs" />
        <TextView
            android:id="@+id/toSettings"
            style="@style/MenuText"
            android:drawableLeft="@drawable/ic_round_settings_24px"
            android:text="@string/settings" />

    </com.github.mzule.fantasyslide.SideBar>


</com.github.mzule.fantasyslide.FantasyDrawerLayout>