<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/ic_settings_4"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/HeaderText"
        android:text="@string/notifications"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/recycler_item_margin_bottom"
        android:layout_marginLeft="@dimen/recycler_item_margin"
        android:layout_marginRight="@dimen/recycler_item_margin"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderText"
                android:text="@string/everyday_survey" />

            <LinearLayout
                android:id="@+id/switch1Layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="Schedule"
                    style="@style/DefaultText" />

                <TextView
                    android:id="@+id/everyDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corner"
                    android:padding="5dp"
                    android:text="20:00"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:theme="@style/SwitchTheme" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/recycler_item_margin_bottom"
        android:layout_marginLeft="@dimen/recycler_item_margin"
        android:layout_marginRight="@dimen/recycler_item_margin"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" android:padding="15dp"
                android:orientation="vertical">

            <TextView
                style="@style/HeaderText"
                android:text="@string/medication"/>

            <LinearLayout
                android:id="@+id/switch2Layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    style="@style/DefaultText"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="Morning" />

                <TextView
                    android:id="@+id/morning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corner"
                    android:padding="5dp"
                    android:text="8:00"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/switch3Layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    style="@style/DefaultText"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="Evening" />

                <TextView
                    android:id="@+id/evening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rounded_corner"
                    android:padding="5dp"
                    android:text="20:00"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>